Fix Trending Section alignment

--- a/style.css
+++ b/style.css
@@ -283,7 +283,8 @@ a {
 
 .trending-user {
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr 5fr;
+    gap: 5px;
     align-items: center;
 }
 
